@@ -1,5 +1,7 @@
 2006-06-09 Sandro Santilli <strk@refractions.net>
 
+	* tests/unit/geom/LineStringTest.cpp: removed
+	signed/unsigned comparison warnings.
 	* source/geomgraph/GeometryGraph.cpp,
 	source/operation/buffer/OffsetCurveSetBuilder.cpp,
 	source/operation/overlay/OverlayOp.cpp,
